phase2_Dev/src/objects/Step_Process_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>The rule will only be checked if active flag is checked. If unchecked, the rule will be ignored</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Transaction_Field__c</fullName>
        <formula>Associated_Transaction_Step__r.Associated_Transaction_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Transaction Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Transaction_Step__c</fullName>
        <inlineHelpText>Step this process rule needs to be checked for</inlineHelpText>
        <label>Associated Transaction Step</label>
        <referenceTo>Transaction_Process_Step__c</referenceTo>
        <relationshipLabel>Associated Transaction Step</relationshipLabel>
        <relationshipName>Step_Process_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rule_Ranking__c</fullName>
        <inlineHelpText>Rank this rule should be displayed (will determine in which order items appear in the fields)</inlineHelpText>
        <label>Rule Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Process_Rule__c</fullName>
        <inlineHelpText>Standard Process Rule that needs to be checked for the selected step</inlineHelpText>
        <label>Standard Process Rule</label>
        <referenceTo>Standard_Transaction_Process_Rule__c</referenceTo>
        <relationshipLabel>Associated Tranasction step</relationshipLabel>
        <relationshipName>Step_Process_Rules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Step Process Rule</label>
    <nameField>
        <displayFormat>SPR- {000000}</displayFormat>
        <label>Step Process Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Process Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>